--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="es.nekosoft.ejercicio01.activity.WebActivity">
+    tools:context="es.nekosoft.myhabits.activity.WebActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
