--- a/app/src/main/res/layout/card_weather.xml
+++ b/app/src/main/res/layout/card_weather.xml
@@ -20,52 +20,53 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/pic_weather"
+        <TextView
+            android:id="@+id/tv_weather"
+            android:text="@string/wea_example"
+            android:textColor="#FFF"
+            android:textSize="24sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/cloudy"/>
+            android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/time"
-            android:text="@string/time_time_weather"
+            android:id="@+id/tv_temperature"
+            android:text="@string/wea_example"
             android:textColor="#FFF"
             android:textSize="24sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/pic_weather"/>
-
-        <ImageView
-            android:id="@+id/pic_thermometre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/thermometre"
-            android:layout_toRightOf="@+id/time"/>
-
-        <TextView
-            android:id="@+id/temperature"
-            android:text="@string/temperature_time_weather"
-            android:textColor="#FFF"
-            android:textSize="24sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/pic_thermometre"/>
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/tv_weather" />
 
 
         <android.support.v7.widget.AppCompatCheckBox
-            android:id="@+id/check"
+            android:id="@+id/check_time_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pic_weather"/>
+            android:layout_below="@+id/tv_weather"/>
 
         <TextView
-            android:id="@+id/check_label"
+            android:id="@+id/tv_check_time_weather"
             android:text="@string/check_time_weather"
             android:textColor="#FFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pic_weather"
-            android:layout_toRightOf="@+id/check"/>
+            android:layout_below="@+id/tv_weather"
+            android:layout_toRightOf="@+id/check_time_weather"/>
+
+        <SeekBar
+            android:id="@+id/sb_time_weather_update"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/check_time_weather"/>
+
+        <TextView
+            android:id="@+id/sb_tv_time_weather_update"
+            android:text="@string/time_reload"
+            android:textColor="#FFF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sb_time_weather_update"/>
 
     </RelativeLayout>
 
